# ishop

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yaml  pyproject.toml
common/: enums.py
database/: session.py
db/: config.py  session.py
models/: cart.py  cart_item.py  item.py  order.py  order_item.py  payment.py  user.py
routers/: auth_router.py  cart_router.py  data_router.py  database.py  item.py  items_router.py  orders_router.py  root.py  security.py  user.py  users_router.py
schemas/: base.py  cart.py  cart_item.py  item.py  message.py  order.py  order_item.py  payment.py  user.py
services/: auth_service.py  cart_service.py  data_service.py  database_service.py  item_service.py  items_service.py  orders_service.py  security_service.py  user_serivce.py  users_service.py
utils/: logger.py  security.py  settings.py
